layout packages + installed_packages function fix

--- a/tools/sample.cfg
+++ b/tools/sample.cfg
@@ -17,6 +17,15 @@ m2repository
 [extras:android]
 m2repository
 
+[extras:m2repository:com:android:support:constraint:constraint-layout]
+1.0.0
+1.0.1
+1.0.2
+
+[extras:m2repository:com:android:support:constraint:constraint-layout-solver]
+1.0.0
+1.0.2
+
 [keystore]
 alias=dummyalias
 name=AG
